# gsync

./: README.md  catalog-info.yaml  pyproject.toml  run.sh
gsync/: __main__.py
